# simulation_compare

./: .gitmodules  README.md  test.vcd
example_c/: 1.txt  README.md
example_c/dpi_example/dpi_example_v0/: Makefile  sim_main.cpp
example_c/dpi_example_g/dpi_example_v0/: sim_main.cpp
example_cocotb_iverilog/tests/: Makefile  results.xml
example_cocotb_verilator/tests/: Makefile  test_adder.py
example_python/cocotb-project/: README.md
example_python/ctypes-project/: Makefile  example.cpp  test.py
example_python/pybind11-project/: example.cpp  test.py
example_python/pybind11-project/c_python_example/cmake_example/: CMakeLists.txt  test.py
example_python/pybind11-project/c_python_example/cmake_example/src/: calc.py  main.cpp
example_python/pybind11-project/c_python_example/func_example/example/: CMakeLists.txt  cacl.py  main.cpp
example_python/pybind11-project/dpi_example/dpi_example_v4/tb/arp_3/: CMakeLists.txt  Makefile  bfm.v
example_python/pybind11-project/dpi_example/dpi_example_v4/tb/arp_3/utils/: harness_utils.py
example_python/pybind11-project/dpi_example/dpi_example_vtest/: CMakeLists.txt  Makefile  sim_main.cpp  wrapper.cpp
example_python/pybind11-project/dpi_example/dpi_example_vtest/hdl/: wrapper.sv
example_python/pybind11-project/dpi_example/dpi_example_vtest/tests/: Makefile
example_python/pybind11-project/dpi_example/dpi_example_vtest/utils/: harness_utils.py
example_sc/: 1.txt
example_sc/first_project/: Makefile  hello  main.cpp  main.h
example_sc/simple_project/: Makefile  sc_main.cpp
example_sc/tlm_project/: hello  main.cpp
example_sc/verilator_c_project/: Makefile  sc_main.cpp
example_sc/verilator_project/: sc_main.cpp
example_sc/verilator_project_2/: Makefile  sc_main.cpp
example_spinal/SpinalTemplateSbt/: Makefile
example_sv_iverilog/: command
example_sv_iverilog/hdl/: tinyalu.sv
example_sv_iverilog/tests/: test_adder.v
example_sv_iverilog/tests1/: Makefile  test_adder.v  vfile.txt
example_sv_iverilog/tests2/: test_adder.v  vfile.txt
example_sv_verilator/hdl/: MyTopLevel.v  tinyalu.sv
example_sv_verilator/tests/: Makefile  test_adder.cpp
example_sv_verilator/tests1/: Makefile  test_adder.cpp
example_sv_verilator/tests2/: Makefile  test_tinyalu.cpp
example_test/array_test/: Makefile  bfm.v  sim_main_g.cpp  sim_main_v.cpp
example_test/thread_example/: Makefile  testThread.cpp  testThread_2.cpp  testThread_5.cpp
example_test/thread_test/: Makefile  bfm.v  sim_main_g.cpp  sim_main_v.cpp  testThread_3.cpp  testThread_4.cpp  testThread_6.cpp
(+556 files in other folders)
